@@ -1,10 +1,11 @@
-$(document).ready(function() {
+function initializeCookie() {
 	// difficulty:
 	// 4 => beginner
 	// 8 => intermediate
 	// 12 => advanced
 	if ($.cookie("difficulty") == null) {
+		console.log("cookie set");
 		$.cookie("difficulty", 4);
 	}
-});
+};
 
