@@ -16,7 +16,7 @@ var monographs = [
 	[["ma", "ま", "マ"], ["mi", "み", "ミ"], ["mu", "む", "ム"], ["me", "め", "メ"], ["mo", "も", "モ"]],
 	[["ya", "や", "ヤ"], ["", "", ""], ["yu", "ゆ", "ユ"], ["", "", ""], ["yo", "よ", "ヨ"]],
 	[["ra", "ら", "ラ"], ["ri", "り", "リ"], ["ru", "る", "ル"], ["re", "れ", "レ"], ["ro", "ろ", "ロ"]],
-	[["wa", "わ", "ワ"], ["i/wi", "ゐ", "ヰ"], ["", "", ""], ["e/we", "ゑ", "ヱ"], ["o/wo", "を", "ヲ"]],
+	[["wa", "わ", "ワ"], ["i/wi", "ゐ", ""], ["", "", ""], ["e/we", "ゑ", ""], ["o/wo", "を", "ヲ"]],
 	[["n", "ん", "ン"]]
 ];
 
@@ -33,16 +33,15 @@ var digraphs = [
 var monographs_with_diacritics = [
 	[["ga", "が", "ガ"], ["gi", "ぎ", "ギ"], ["gu", "ぐ", "グ"], ["ge", "げ", "ゲ"], ["go", "ご", "ゴ"]],
 	[["za", "ざ", "ザ"], ["ji", "じ", "ジ"], ["zu", "ず", "ズ"], ["ze", "ぜ", "ゼ"], ["zo", "ぞ", "ゾ"]],
-	[["da", "だ", "ダ"], ["ji", "ぢ", "ヂ"], ["zu", "づ", "ヅ"], ["de", "で", "デ"], ["do", "ど", "ド"]],
+	[["da", "だ", "ダ"], ["ji*", "ぢ", "ヂ"], ["zu*", "づ", "ヅ"], ["de", "で", "デ"], ["do", "ど", "ド"]],
 	[["ba", "ば", "バ"], ["bi", "び", "ビ"], ["bu", "ぶ", "ブ"], ["be", "べ", "ベ"], ["bo", "ぼ", "ボ"]],
-	[["pa", "ぱ", "パ"], ["pi", "ぴ", "ピ"], ["pu", "ぷ", "プ"], ["pe", "ぺ", "ペ"], ["po", "ぽ", "ポ"]],
-	[["vu", "ゔ", ""]]
+	[["pa", "ぱ", "パ"], ["pi", "ぴ", "ピ"], ["pu", "ぷ", "プ"], ["pe", "ぺ", "ペ"], ["po", "ぽ", "ポ"]]
 ];
 
 var digraphs_with_diacritics = [
 	[["gya", "ぎゃ", "ギャ"], ["gyu", "ぎゅ", "ギュ"], ["gyo", "ぎょ", "ギョ"]],
 	[["ja", "じゃ", "ジャ"], ["ju", "じゅ", "ジュ"], ["jo", "じょ", "ジョ"]],
-	[["ja", "ぢゃ", "ヂャ"], ["ju", "ぢゅ", "ヂュ"], ["jo", "ぢょ", "ヂョ"]],
+	[["ja*", "ぢゃ", "ヂャ"], ["ju*", "ぢゅ", "ヂュ"], ["jo*", "ぢょ", "ヂョ"]],
 	[["bya", "びゃ", "ビャ"], ["byu", "びゅ", "ビュ"], ["byo", "びょ", "ビョ"]],
 	[["pya", "ぴゃ", "ピャ"], ["pyu", "ぴゅ", "ピュ"], ["pyo", "ぴょ", "ピョ"]]
 ];
